--- a/MyApplication2/app/src/main/AndroidManifest.xml
+++ b/MyApplication2/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
@@ -12,21 +13,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+
+
+
         <activity android:name=".new_fragment2"></activity>
         <activity android:name=".Address_revise" />
         <activity android:name=".IdealWorldCupResult" />
         <activity android:name=".Tab3Female" />
         <activity android:name=".Tab3Male" />
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".Fragment2Activity" />
+        <activity android:name=".Fragment2BookmarksActivity" />
+        <activity android:name=".SubActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Fragment2Activity" />
-        <activity android:name=".Fragment2BookmarksActivity" />
-        <activity android:name=".SubActivity" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <activity android:name="com.facebook.FacebookActivity" android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" />
+        <activity android:name="com.facebook.CustomTabActivity" android:exported="true">
+            <intent-filter> <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
+
     </application>
 
 </manifest>
