--- a/MyApplication2/app/build.gradle
+++ b/MyApplication2/app/build.gradle
@@ -47,8 +47,10 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.39.0'
 
     //firebase
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-auth'
+//    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
