--- a/MyApplication2/build.gradle
+++ b/MyApplication2/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenCentral()
+//        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
@@ -17,9 +17,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven{
-            url "https://maven.google.com"
-        }
+//        maven{
+//            url "https://maven.google.com"
+//        }
     }
 }
 
