--- a/MyApplication2/app/build.gradle
+++ b/MyApplication2/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.tst.espresso:espresso-core:3.3.0e'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
