--- a/MyApplication2/app/build.gradle
+++ b/MyApplication2/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     //facebook login
     implementation 'com.facebook.android:facebook-android-sdk:4.39.0'
 
+    //recyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
     //firebase
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-core:18.0.0'
