--- a/server/week2_server/.vscode/settings.json
+++ b/server/week2_server/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\q\\.virtualenvs\\week2_server-V2tRUb3d\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\q\\.virtualenvs\\server-0h2ZdKzA\\Scripts\\python.exe"
 }
