--- a/MyApplication2/app/src/main/AndroidManifest.xml
+++ b/MyApplication2/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MyApplication">
         <activity android:name=".Specific_Beach"></activity>
-        android:usesCleartextTraffic="true">
         <activity android:name=".contacts_dbaccess" />
         <activity android:name=".Address_revise" />
         <activity android:name=".MainActivity"></activity>
